samples/_failures_safe/1761425759_cebd47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ccf02ac2.c: In function ‘main’:
./samples/SAFE/__tmp_ccf02ac2.c:140:16: error: missing terminating " character
  140 |         printf("\nMatrix Sum:\
      |                ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ccf02ac2.c:140:9: error: expected expression at end of input
  140 |         printf("\nMatrix Sum:\
      |         ^~~~~~
./samples/SAFE/__tmp_ccf02ac2.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccf02ac2.c:140:9: error: expected declaration or statement at end of input
